[package]
name = "leelacoin"
version = "0.0.1"
authors = ["Ofek Shochat"]
edition = "2018"

[dependencies]
sha3 = "*"
hex = "*"
libp2p = "0.39.1"
futures = "*"
serde = "*"
serde_json = "1.0"
once_cell = "1.5"
async-std = {version = "1.10.0", features = ["attributes"]}
miniz_oxide = "0.4.4"
chrono = "*"